--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
 
+<script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
 
   </head>
 <body>
